# real-space-electrostatic-sum

./: .travis.yml  CMakeLists.txt  license.md  make  readme.md
include/: c_real_space_electrostatic_sum.h
python/: benchmarking.ipynb  real_space_electrostatic_sum.py
source/: c_real_space_electrostatic_sum.f90  real_space_electrostatic_sum.f90
src/: real_space_electrostatic_sum.f90  real_space_electrostatic_sum_c.f90
test/: test.py
